--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "deploy": "./scripts/deploy.sh",
     "test": "jest --coverage --maxWorkers=50%",
     "test:watch": "jest --watch",
     "test:unit": "jest tests/unit --maxWorkers=50%",
@@ -60,6 +61,7 @@
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.56.0"
   }
 }
