--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.19",
     "framer-motion": "^10.16.16",
-    "next": "^14.2.35",
+    "next": "14.2.35",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
