--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,9 @@
 name = "time-seal"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".next"
 
-[env.production]
-name = "time-seal"
-
-[[env.production.r2_buckets]]
-binding = "BUCKET"
-bucket_name = "timeseal-vault"
-
-[[env.production.d1_databases]]
+[[d1_databases]]
 binding = "DB"
 database_name = "timeseal-db"
-database_id = "YOUR_DATABASE_ID"
+database_id = "4b0ca768-e38b-400b-8601-e6ebd34a1734"
