--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.19",
     "framer-motion": "^10.16.16",
+    "lucide-react": "^0.562.0",
     "next": "14.2.35",
     "qrcode": "^1.5.4",
     "react": "^18",
