feat: migrate to OpenNext Cloudflare deployment
- Remove 'edge' runtime exports from API routes and switch to Cloudflare context
- Update container dependency resolution from resolve() to direct property access
- Add .open-next to .gitignore for build artifacts
- Include production secrets setup instructions in README
- Add author credit to README footer
- Update dependencies for OpenNext compatibility, including terser and other build tools

This migration enables deployment on Cloudflare Pages using OpenNext for improved performance and integration.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "./scripts/deploy.sh",
+    "preview": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare preview",
+    "deploy": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "test": "jest --coverage --maxWorkers=50%",
     "test:watch": "jest --watch",
     "test:unit": "jest tests/unit --maxWorkers=50%",
@@ -20,6 +22,7 @@
     "@cloudflare/workers-types": "^4.20231218.0",
     "@marsidev/react-turnstile": "^1.4.0",
     "@number-flow/react": "^0.5.10",
+    "@opennextjs/cloudflare": "^1.14.7",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.182.0",
