--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,9 @@
 name = "time-seal"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".next"
+pages_build_output_dir = ".vercel/output/static"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "timeseal-db"
-database_id = "4b0ca768-e38b-400b-8601-e6ebd34a1734"
+database_name = "time-seal-db"
+database_id = "07ad5c32-1de4-410f-aa5d-82366405fe66"
