--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "preview": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare preview",
     "deploy": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare deploy",
+    "typecheck": "tsc --noEmit",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "test": "jest --coverage --maxWorkers=50%",
     "test:watch": "jest --watch",
