feat: add live activity ticker with analytics API endpoint
- Introduce new /api/activity route to fetch recent events (seal_created, seal_unlocked, pulse_received) from analytics table, mapping to activity types (sealed, unlocked, dms) with location and timestamp
- Update ActivityTicker component to fetch and display real data from the API every 30 seconds, replacing static sample activities for better user engagement
- Enhance database layer with fail-fast validation for seal records to ensure data integrity and prevent runtime errors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "description": "Create cryptographically enforced time-locked vaults and dead man's switches. Zero-trust, edge-native encryption.",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#0a0a0a",
   "theme_color": "#00ff41",
   "icons": [
@@ -21,5 +22,14 @@
       "sizes": "1200x630",
       "type": "image/png"
     }
-  ]
+  ],
+  "share_target": {
+    "action": "/",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
 }
