feat(recovery): add BIP39 seed phrase recovery option for vaults
Introduces a new option to generate a 12-word BIP39 seed phrase during
vault creation. This seed phrase allows users to deterministically
reconstruct their vault's decryption key (Key A) if the original vault
link is lost.

- Enhances self-custody by providing a mechanism for users to recover
  their assets independently.
- Leverages industry-standard BIP39 for robust and secure key derivation.
- Displays the seed phrase and unique Seal ID upon successful vault
  creation, with clear instructions for secure storage.
- Updates documentation to reflect the new innovation and recovery flow.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@opennextjs/cloudflare": "^1.14.7",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^8.18.0",
+    "@scure/bip32": "^2.0.1",
+    "@types/bip39": "^2.4.2",
     "@types/pako": "^2.0.4",
     "@types/three": "^0.182.0",
+    "bip39": "^3.1.0",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
