--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@scure/bip32": "^2.0.1",
     "@types/bip39": "^2.4.2",
     "@types/pako": "^2.0.4",
+    "@types/react-datepicker": "^6.2.0",
     "@types/three": "^0.182.0",
     "bip39": "^3.1.0",
     "canvas-confetti": "^1.9.4",
@@ -46,6 +47,7 @@
     "pino-pretty": "^13.1.3",
     "qrcode": "^1.5.4",
     "react": "^18",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-tailwindcss-datepicker": "^2.0.0",
