security: exclude secret-handling shell scripts from git
Removed from tracking:
- scripts/setup-secrets.sh (generates MASTER_ENCRYPTION_KEY)
- scripts/setup-turnstile.sh (Turnstile secrets)
- scripts/setup-cloudflare.sh (API tokens)
- scripts/migrate-prod.sh (production operations)
- scripts/backup-db.sh (backup paths)
- scripts/deploy.sh (production URLs)

Added to .gitignore:
- All above scripts
- *.backup and *.bak files

Prevents accidental secret leaks. Files remain local only.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ next-env.d.ts
 logs/
 backups/
 *.log
+
+# Shell scripts with secrets (security)
+scripts/setup-secrets.sh
+scripts/setup-turnstile.sh
+scripts/setup-cloudflare.sh
+scripts/migrate-prod.sh
+scripts/backup-db.sh
+scripts/deploy.sh
+*.backup
+*.bak
