fix: domain migration to timeseal.online - runtime env vars + secrets
- Switch from build-time NEXT_PUBLIC_APP_URL to runtime APP_URL
- Fix origin validation by reading env at runtime not build time
- Deploy missing TURNSTILE_SECRET_KEY secret to production
- Add enhanced error logging with type checking
- Document complete migration learnings and checklist
- Create error handling rules (no bare catch blocks)

Fixes:
- Origin validation 403 error (build-time vs runtime vars)
- Turnstile secret missing (.prod.vars not auto-deployed)

Files:
- lib/appConfig.ts: Runtime APP_URL with fallback
- wrangler.jsonc: Add APP_URL to vars
- lib/apiHandler.ts: Enhanced error logging
- docs/DOMAIN-MIGRATION-LEARNINGS.md: Complete guide
- .amazonq/rules/error-handling.md: Error handling rules

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 NODE_ENV=development
 
 # Application URL (used for CORS, CSRF validation, and public links)
+# Production: https://timeseal.online
+# Development: http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Cloudflare Workers Bindings (configured in wrangler.toml)
