--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint",
     "preview": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare preview",
     "deploy": "./scripts/deploy.sh",
+    "deploy:prod": "npx @opennextjs/cloudflare build && npx wrangler deploy",
+    "deploy:staging": "NEXT_PUBLIC_APP_URL=https://staging.timeseal.online npx @opennextjs/cloudflare build && npx wrangler deploy --env staging",
+    "deploy:dev": "npx @opennextjs/cloudflare build && npx wrangler deploy --env development",
     "deploy:unsafe": "npx @opennextjs/cloudflare build && npx @opennextjs/cloudflare deploy",
     "typecheck": "tsc --noEmit",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
